# chip8-emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_and_run.sh  env.txt  main.cpp  makefile  start.sh  vcpkg-configuration.json  vcpkg.json
include/: chip8.hpp
script/: rebuild.bat  run.bat  test.bat
src/: CMakeLists.txt  chip8.cpp  chip8.hpp  main.cpp  main.hpp
src/chip8/: CMakeLists.txt  chip8.cpp  chip8.hpp
src/display/: CMakeLists.txt  display.cpp  display.hpp
src/include/: bus.hpp  event.hpp  header.hpp  logger.hpp
src/keyboard/: CMakeLists.txt  keyboard.cpp  keyboard.hpp
test/: CMakeLists.txt  test.cpp  test_main.cpp
